# takanawa

./: .gitignore  CMakeLists.txt  Cargo.toml  Gemfile  Package.swift  README.md  Takanawa.podspec  build.gradle.kts  cbindgen.toml  gradle.properties  gradlew  gradlew.bat  mise.toml  package.json  pnpm-lock.yaml  settings.gradle.kts
.github/: release.yml
.github/workflows/: android.yml  build.yml  docs.yml  npm.yml  publish.yml  test.yml
Sources/Takanawa/: Takanawa.swift
android/takanawa-android/: build.gradle.kts  consumer-rules.pro
android/takanawa-android/src/androidTest/kotlin/ai/yetanother/takanawa/: TakanawaInstrumentedTest.kt
android/takanawa-android/src/main/kotlin/ai/yetanother/takanawa/: DownloadConfig.kt  DownloadPhase.kt  DownloadProgressListener.kt  DownloadSnapshot.kt  DownloadSpeedListener.kt  DownloadSpeedSnapshot.kt  HashKind.kt  NativeBridge.kt  Takanawa.kt  TakanawaDownload.kt  TakanawaException.kt  TakanawaStatus.kt
android/takanawa-android/src/test/kotlin/ai/yetanother/takanawa/: DownloadConfigTest.kt  TakanawaDownloadTest.kt  TakanawaStatusTest.kt
cmake/: TakanawaConfig.cmake.in
crates/takanawa-cli/: Cargo.toml
crates/takanawa-cli/src/: main.rs
crates/takanawa-core/: Cargo.toml
crates/takanawa-core/src/: bitmap.rs  chunk.rs  error.rs  hash.rs  lib.rs  metadata.rs  part_file.rs
crates/takanawa-core/tests/: workspace_versions.rs
crates/takanawa-ffi/: Cargo.toml
crates/takanawa-ffi/src/: lib.rs
crates/takanawa-http/: Cargo.toml
crates/takanawa-http/src/: content_range.rs  downloader.rs  lib.rs  limiter.rs  state.rs
crates/takanawa-http/tests/: download_integration.rs
crates/takanawa-http/tests/common/: mod.rs
docs/: index.md  part-format.md
docs/.vitepress/: config.ts
docs/api/: index.md
docs/guide/: android.md  apple.md  c-cpp.md  capacitor.md  csharp.md  gdextension.md  getting-started.md  node.md  platforms.md  rust.md  tauri.md
docs/public/: CNAME
fixtures/android-maven-local-smoke/: build.gradle.kts
fixtures/android-maven-local-smoke/src/androidTest/kotlin/ai/yetanother/takanawa/smoke/: MavenLocalCallbackInstrumentedTest.kt
fixtures/android-maven-local-smoke/src/main/kotlin/ai/yetanother/takanawa/smoke/: SmokeReference.kt
fixtures/cmake-integration/: CMakeLists.txt  main.cpp
fixtures/cmake-package-consumer/: CMakeLists.txt
fixtures/csharp-smoke/: Program.cs  YetAnotherAI.Takanawa.Smoke.csproj
fixtures/swift-integration/: Package.swift
fixtures/swift-integration/Sources/Takanawa/: Takanawa.swift
fixtures/swift-integration/Sources/TakanawaLinkage/: TakanawaLinkage.swift
fixtures/swift-integration/Sources/TakanawaSmoke/: main.swift
include/: module.modulemap  takanawa.h
ports/takanawa/: portfile.cmake  vcpkg.json
scripts/: build-android.sh  build-apple-xcframework.sh  check-swiftpm-checksum.sh  check-swiftpm-release-manifest.sh  generate-swiftpm-release-manifest.sh  package-cocoapods.sh  package-swiftpm.sh  prepare-npm-declarations.mjs  sync-version.sh  test-capacitor-ios.sh  test-swift-integration.sh  update-swiftpm-checksum.sh
xtask/: Cargo.toml
xtask/src/: android.rs  apple.rs  csharp.rs  gdextension.rs  js.rs  main.rs  native.rs  release.rs  support.rs
