[workspace]
members = [
    "crates/takanawa-core",
    "crates/takanawa-http",
    "crates/takanawa-ffi",
    "crates/takanawa-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/yetanother.ai/takanawa"

[workspace.dependencies]
bytes = "1.8"
crc32fast = "1.4"
fs2 = "0.4"
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
rustls = "0.23"
serde_json = "1.0"
sha2 = "0.11"
takanawa-core = { version = "0.2.0", path = "crates/takanawa-core" }
takanawa-http = { version = "0.2.0", path = "crates/takanawa-http", default-features = false }
tempfile = "3.14"
thiserror = "2.0"
tokio = { version = "1.41", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
webpki-roots = "1.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
