[workspace]
members = [
    "crates/takanawa-core",
    "crates/takanawa-http",
    "crates/takanawa-ffi",
    "crates/takanawa-cli",
    "packages/takanawa-node",
    "packages/takanawa-gdextension",
    "packages/takanawa-tauri",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.7.5"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/yet-another-ai/takanawa"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
base64 = "0.22"
bytes = "1.11"
crc32fast = "1.5"
fs2 = "0.4"
futures-util = "0.3"
godot = { version = "0.4.5", features = ["api-4-5"] }
hex = "0.4"
napi = { version = "3.9.1", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3.5.6"
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
takanawa-core = { version = "0.7.5", path = "crates/takanawa-core" }
takanawa-http = { version = "0.7.5", path = "crates/takanawa-http", default-features = false }
tauri = { version = "2.11", default-features = false }
tauri-plugin = { version = "2.6", features = ["build"] }
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
toml_edit = "0.25"
webpki-roots = "1.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
