[package]
name = "takanawa-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line downloader using the Takanawa resumable range download engine"
readme = "../../README.md"
keywords = ["download", "range", "resume", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "takanawa"
path = "src/main.rs"

[features]
default = ["tls-rustls"]
tls-rustls = ["takanawa-http/tls-rustls"]
tls-platform-native = ["takanawa-http/tls-platform-native"]
tls-platform-roots = ["tls-platform-native"]

[dependencies]
hex.workspace = true
takanawa-core.workspace = true
takanawa-http = { workspace = true, default-features = false }
tokio.workspace = true

[lints]
workspace = true
