[package]
name = "takanawa-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core chunk planning and resumable .part file state for Takanawa range downloads"
readme = "../../README.md"
keywords = ["download", "range", "resume", "http"]
categories = ["filesystem", "network-programming"]

[dependencies]
crc32fast.workspace = true
fs2.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
