[package]
name = "takanawa-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI dynamic and static library wrapper for Takanawa range downloads"
readme = "../../README.md"
keywords = ["download", "ffi", "range", "resume"]
categories = ["api-bindings", "network-programming"]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["tls-rustls"]
jni = ["dep:jni"]
tls-rustls = ["takanawa-http/tls-rustls"]
tls-platform-roots = ["takanawa-http/tls-platform-roots"]

[dependencies]
jni = { version = "0.21", optional = true }
takanawa-core.workspace = true
takanawa-http = { workspace = true, default-features = false }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
